{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 51,
  "lineage": "6ff6f5e1-88e7-9e98-2c9d-2931e8d6e914",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f144da14cf1b3da",
            "arn": "arn:aws:ec2:eu-north-1:374331245951:elastic-ip/eipalloc-02f144da14cf1b3da",
            "association_id": "eipassoc-042a8e1e64e49ec6d",
            "domain": "vpc",
            "id": "eipalloc-02f144da14cf1b3da",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0aca262b61d9929cb",
            "private_dns": "ip-10-0-1-63.eu-north-1.compute.internal",
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-51-21-93-228.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.93.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aws-devops-ecs-nat-eip"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:internet-gateway/igw-05de44e158fa8a7fe",
            "id": "igw-05de44e158fa8a7fe",
            "owner_id": "374331245951",
            "tags": {
              "Name": "aws-devops-ecs-igw"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-igw"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:loadbalancer/app/aws-devops-ecs-alb/2ca3056fb53e251b",
            "arn_suffix": "app/aws-devops-ecs-alb/2ca3056fb53e251b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "aws-devops-ecs-alb-951393148.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:loadbalancer/app/aws-devops-ecs-alb/2ca3056fb53e251b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "aws-devops-ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05067a1a73f303f93"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052a98515b2fd3cb4"
              },
              {
                "subnet_id": "subnet-0d7e484794b51be9e"
              }
            ],
            "subnets": [
              "subnet-052a98515b2fd3cb4",
              "subnet-0d7e484794b51be9e"
            ],
            "tags": {
              "Name": "aws-devops-ecs-alb"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-alb"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:listener/app/aws-devops-ecs-alb/2ca3056fb53e251b/254998a2a80300a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:targetgroup/aws-devops-ecs-tg/7d7b35829edeccb3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:listener/app/aws-devops-ecs-alb/2ca3056fb53e251b/254998a2a80300a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:loadbalancer/app/aws-devops-ecs-alb/2ca3056fb53e251b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:targetgroup/aws-devops-ecs-tg/7d7b35829edeccb3",
            "arn_suffix": "targetgroup/aws-devops-ecs-tg/7d7b35829edeccb3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:374331245951:targetgroup/aws-devops-ecs-tg/7d7b35829edeccb3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "aws-devops-ecs-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws-devops-ecs-tg"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f144da14cf1b3da",
            "association_id": "eipassoc-0fb6506be8430b123",
            "connectivity_type": "public",
            "id": "nat-02e1d8fd2f72a1db6",
            "network_interface_id": "eni-090a926e69dc7b250",
            "private_ip": "10.0.1.173",
            "public_ip": "51.21.93.228",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7e484794b51be9e",
            "tags": {
              "Name": "aws-devops-ecs-nat-gw"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:route-table/rtb-0d066145319e731f4",
            "id": "rtb-0d066145319e731f4",
            "owner_id": "374331245951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02e1d8fd2f72a1db6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-devops-ecs-private-rt"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:route-table/rtb-0b47a99a10e8b8a6b",
            "id": "rtb-0b47a99a10e8b8a6b",
            "owner_id": "374331245951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05de44e158fa8a7fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-devops-ecs-public-rt"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019aa06d0e565904b",
            "route_table_id": "rtb-0d066145319e731f4",
            "subnet_id": "subnet-06e73a228996328c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005d7e533ec126a5b",
            "route_table_id": "rtb-0d066145319e731f4",
            "subnet_id": "subnet-0cd36776a200de3b2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ff9efc45e36ab85",
            "route_table_id": "rtb-0b47a99a10e8b8a6b",
            "subnet_id": "subnet-0d7e484794b51be9e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00898e290d542af70",
            "route_table_id": "rtb-0b47a99a10e8b8a6b",
            "subnet_id": "subnet-052a98515b2fd3cb4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:security-group/sg-05067a1a73f303f93",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05067a1a73f303f93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "aws-devops-ecs-alb-sg",
            "name_prefix": "",
            "owner_id": "374331245951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-devops-ecs-alb-sg"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:security-group/sg-021ab6f471144ff82",
            "description": "ECS service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021ab6f471144ff82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05067a1a73f303f93"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "aws-devops-ecs-ecs-sg",
            "name_prefix": "",
            "owner_id": "374331245951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-devops-ecs-ecs-sg"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:subnet/subnet-06e73a228996328c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e73a228996328c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374331245951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-devops-ecs-private-1"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-private-1"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:subnet/subnet-0cd36776a200de3b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd36776a200de3b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "374331245951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-devops-ecs-private-2"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-private-2"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:subnet/subnet-0d7e484794b51be9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7e484794b51be9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374331245951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-devops-ecs-public-1"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-public-1"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:subnet/subnet-052a98515b2fd3cb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052a98515b2fd3cb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "374331245951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aws-devops-ecs-public-2"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-public-2"
            },
            "vpc_id": "vpc-0fb01f1fa94c5275b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:374331245951:vpc/vpc-0fb01f1fa94c5275b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f114f7bdc6270efe",
            "default_route_table_id": "rtb-007e6cf5927f870db",
            "default_security_group_id": "sg-0ebfe23f6e25dc20c",
            "dhcp_options_id": "dopt-095668e13d9e98ef8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb01f1fa94c5275b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-007e6cf5927f870db",
            "owner_id": "374331245951",
            "tags": {
              "Name": "aws-devops-ecs-vpc"
            },
            "tags_all": {
              "Name": "aws-devops-ecs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}